<resources>
    <string name="app_name">Techno Ad</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="dont_have_account">Don\'t Have An Account</string>
    <string name="or">Or</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="have_an_account_already">Have An Account Already</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="i_agree_tv"><![CDATA[I agree the Terms & Conditions and Privacy Policy]]></string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_my_compaigns">My Compaigns</string>
    <string name="title_designs">My Designs</string>
    <string name="title_go_pro">Go Pro</string>
    <string name="grow_your_bussiness">GROW YOUR BUSINESS</string>
    <string name="create_a_logo">Create a Logo</string>
    <string name="view_more">View more</string>
    <string name="my_designs">My Designs</string>
    <string name="logo">Logo</string>
    <string name="poster">Poster</string>
    <string name="premium_subscription">PREMIUM SUBSCRIPTION</string>
    <string name="create_a_logo1">Create A Logo</string>
    <string name="title_activity_edit_logo">EditLogoActivity</string>
    <string name="select_logo">Select Logo</string>
    <string name="add_background">Add Bacground</string>
    <string name="add_style_text_logo">Add/Style Text</string>
    <string name="save_logo">Save Logo</string>
    <string name="add_text">Add Text</string>
    <string name="add_text_here">Add Text Here</string>
    <string name="title_save_logo">Save Logo</string>
    <string name="title_add_style_text">Add/Style Text</string>
    <string name="title_add_background">Add Background</string>
    <string name="title_select_logo">Select Logo</string>
    <string name="file_type">File type:</string>
    <string name="size">Size</string>
    <string name="run_digital_compaign">Run a digital Compaign</string>
    <string name="title_activity_run_digital_compaign">RunDigitalCompaignActivity</string>
    <string name="run_a_compaign">Run A Compaign</string>
    <string name="submit_compaign">Submit Compaign</string>
    <string name="title_activity_edit_poster">EditPosterActivity</string>
    <string name="create_a_poster">Create A Poster</string>
    <string name="label_brush">Brush</string>
    <string name="label_shape">Shape</string>
    <string name="label_oval">Oval</string>
    <string name="label_rectangle">Rectangle</string>
    <string name="label_line">Line</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="select_poster_gallery">Select Poster from Galley</string>
    <string name="select_poster_template">Select Poster From Template</string>
    <string name="select_logo_gallery">Select logo from Galley</string>
    <string name="select_logo_template">Select Logo From Template</string>
</resources>